<resources>
    <string name="app_name">MyTestApplication</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_subheader">navigation_subheader</string>
    <string name="navigation_sub_item_1">navigation_sub_item_1</string>
    <string name="navigation_sub_item_2">navigation_sub_item_2</string>
    <string name="nav_discussion">nav_discussion</string>
    <string name="nav_friends">nav_friends</string>
    <string name="nav_message">nav_message</string>
    <string name="nav_home">nav_home</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>

    <string name="app_title">千里之行始于足下</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">沒有更多数据了</string>
    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>

</resources>
