<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_message" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_headset"
            android:title="@string/nav_friends" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_discuss"
            android:title="@string/nav_discussion" />

    </group>
    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/navigation_subheader">
        <menu>
            <item
                android:id="@+id/navigation_sub_item_1"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_sub_item_1" />
            <item
                android:id="@+id/navigation_sub_item_2"
                android:icon="@drawable/ic_menu"
                android:title="@string/navigation_sub_item_2" />
        </menu>
    </item>
</menu>