<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/right_menu"
        android:title="@string/action_settings">
        <menu>
            <group
                android:id="@+id/menu_action"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_night_mode_system"
                    android:title="@string/menu_night_mode_system" />
                <item
                    android:id="@+id/menu_night_mode_day"
                    android:title="@string/menu_night_mode_day" />
                <item
                    android:id="@+id/menu_night_mode_night"
                    android:title="@string/menu_night_mode_night" />
                <item
                    android:id="@+id/menu_night_mode_auto"
                    android:title="@string/menu_night_mode_auto" />
            </group>
        </menu>

    </item>
</menu>